/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2002-01-21 12:39 UTC+0100 Antonio Linares <alinares@fivetech.com>
   * source/vm/hvm.c
     + New hb_vmIncDouble() and hb_DecDouble() used from
       hb_vmInc() and hb_vmDec(), as proposed by Matteo Baccan,
       to improve execution speed.

2002-01-21 11:48 UTC+0100 Antonio Linares <alinares@fivetech.com>
   * source/vm/classes.c
     * hb_arraySet() used instead of hb_itemArrayPut() to improve
       execution speed.

2002-01-21 10:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/vm/hvm.c
  * source/vm/memvars.c
2002-01-20 08:50 UTC+0800 Ron Pinkas <ron@ronpinkas.com>
       hb_vmArrayPop(), hb_vmPopLocal(), hb_vmPopStatic(), hb_memvarSetValue()
  * source/rdd/dbfntx/dbfntx1.c
    * Added support of DBOI_POSITION and DBOI_KEYCOUNT to ntxOrderInfo()
      and empty prototypes of hb_ntxTagKeyNo(), hb_ntxTagKeyCount()

2002-01-19 06:11 UTC+0800 Ron Pinkas <ron@ronpinkas.com>
   + Added ChangeLog to the /contrib/apollo dir
   + contrib/apollo/test/apollo.ch
     + defines for function sx_SysProp
   * contrib/apollo/test/apollo.prg
     Added define "Apollo.ch"
   * contrib/apollo/apollo1.prg
     + Added function sx_GetVal()
   * contrib/apollo/apollo.c
     + Added function sx_SetOrder()
     + Added function sx_Select()
     + Added function sx_SysProp()

2002-01-20 08:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/dot/pp.prg
  * contrib/dot/pp.txt
  * contrib/dot/pp_harb.ch
    * Synched with source of RC-2 of xBaseScript ( http://SourceForge.net/Projects/xBase-Script )

2002-01-19 06:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    ! Minor bug correction.

2002-01-20 13:00 UTC+0100 Martin Vogel <vogel@inttec.de>

   + contrib/libct/bit1.c