@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2002-01-21 13:42 UTC+0100 Antonio Linares <alinares@fivetech.com>
+   * source/vm/hvm.c
+     * if() used at HB_P_FUNCTION to avoid a hb_itemClear() call when not needed
+       to improve execution speed.
+
+2002-01-21 13:12 UTC+0100 Antonio Linares <alinares@fivetech.com>
+   * source/vm/hvm.c
+     * Improved hb_vmMessage() for execution speed.
+
 2002-01-21 12:39 UTC+0100 Antonio Linares <alinares@fivetech.com>
    * source/vm/hvm.c
      + New hb_vmIncDouble() and hb_DecDouble() used from
